css/index.css
* {
	margin: 0;
	padding: 0;
}

ul {
	list-style: none;
}

a {
	text-decoration: none;
}

a:hover {
	text-decoration: none;
}

.container {
	position: fixed;
	left: 0px;
	top:0px;
	right: 0px;
	bottom: 0px;
	background-image: url(../images/index/bg.jpg);
	background-repeat: no-repeat;
	background-size: cover;
}

.hide-btn {
	position: absolute;
	padding: 10px;
	width: 180px;
	height: 20px;
	line-height: 20px;
	top: 30px;
	right: 50px;
	font-size: 17px;
	font-weight: bold;
	border:2px #fff solid;
	border-radius: 20px;
	color: #fff;
	text-align: center;
	transition: all 1s;
	-webkit-transition: all 1s;
	-moz-transition: all 1s;
	-ms-transition: all 1s;
}

.hide-btn:hover {
	cursor: pointer;
}

.show {
	width: 1050px;
	margin: 0 auto;
	margin-top: 120px;
}

.show ul {
	width: 1050px;
	overflow: hidden;
}

.show ul li {
	overflow: hidden;
	position: relative;
	padding: 10px;
	cursor: pointer;
	width: 300px;
	height: 200px;
	margin: 10px;
	border: 5px #ddd solid;
	float: left;
}

.show ul li img {
	width: 100%;
	height: 100%;
}

.show ul li a {
	position: absolute;
	display: none;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background-color: rgba(0,0,0,0.6);
}

.show ul li a h1 {
	font-size: 22px;
	color: #fff;
	text-align: center;
	margin-top: 60px;
}

.show ul li a p {
	font-size: 16px;
	color: #fff;
	text-align: center;
	margin-top: 20px;
}

.box {
  display: flex;
  flex-wrap: wrap;
}

.row:nth-child(1){
  justify-content: space-around;
}

.row{
  flex-basis: 100%;
  display:flex;
}

.row:nth-child(2){
  justify-content: center;
}

.row:nth-child(3){
  justify-content: space-between;
}

